--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,23 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Portfolio</title>
+  <title>My First Portfolio - Home</title>
 </head>
 <body>
-  <h1>Welcome to My Portfolio</h1>
-  <h2>About Me</h2>
-  <p>I am learning HTML and building my first portfolio.</p>
-  <p>I enjoy creating web pages and improving my skills daily.</p>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <h3>My Interests</h3>
-  <p>I love design, coding, and content creation.</p>
-  <p>This is a journey of growth, consistency, and creativity!</p>
+  <main>
+    <article>
+      <h1>Welcome to My Portfolio</h1>
+      <h2>About Me</h2>
+      <p>I am Gbemisola Ojuolape Lasekan, a product designer and developer.</p>
 
-  <!-- Clickable Image -->
-  <a href="https://www.alxafrica.com/" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-  </a>
+      <h3>My Work</h3>
+      <p>I love building beautiful and functional user interfaces.</p>
+      <p>I'm currently learning front-end development and improving every day.</p>
+      <p>Feel free to explore my work and tweet me your thoughts!</p>
+
+      <a href="https://alxafrica.com/" target="_blank">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+      </a>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Gbemisola Ojuolape Lasekan - <a href="https://github.com/gbemilash" target="_blank">here</a>.</p>
+  </footer>
 </body>
 </html>
-<p><a href="tweets.html">See My Tweets</a></p>
