--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -2,20 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tweets Page</title>
+  <title>My First Portfolio - Tweets</title>
 </head>
 <body>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <h1>Welcome to My Tweets</h1>
+  <main>
+    <article>
+      <h1>My Tweet</h1>
 
-  <!-- Embed the tweet -->
-  <blockquote class="twitter-tweet">
-    <a href="https://twitter.com/theajibolagrey/status/1946640102064615761"></a>
-  </blockquote>
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <!-- Embed tweet -->
+      <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">
+          The official tweet I want to show!
+        </p>
+        &mdash; Ajibola Grey (@theajibolagrey)
+        <a href="https://x.com/theajibolagrey/status/1946640102064615761?s=46">July 19, 2025</a>
+      </blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </article>
 
-  <!-- Link to go back to homepage -->
-  <p><a href="index.html">Back to Homepage</a></p>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
+  <footer>
+    <p>Made by Gbemisola Ojuolape Lasekan - <a href="https://github.com/gbemilash" target="_blank">here</a>.</p>
+  </footer>
 </body>
 </html>
+
