Add complete portfolio index page with correct HTML structure

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,7 @@
 
   <header>
     <h1>Gbemisola Lasekan</h1>
-    <p>Multidisciplinary Product Designer & Application Manager</p>
+    <p>Product Designer & Application Manager passionate about fintech experiences</p>
   </header>
 
   <nav>
@@ -22,7 +22,7 @@
 
   <section id="introduction">
     <h2>Introduction</h2>
-    <p>I’m Gbemisola Lasekan, a passionate and versatile professional with a strong background in Product Design and Application Management. I create user-centered digital experiences and manage large-scale banking and fintech applications with a focus on accessibility, usability, and growth.</p>
+    <p>I’m Gbemisola Lasekan, a product designer and app manager with a focus on delivering meaningful digital experiences, especially in the fintech space. I love solving real problems for users through clean, intuitive design.</p>
   </section>
 
   <section id="projects">
@@ -30,17 +30,19 @@
 
     <article class="project">
       <h3>Fintech Investment App</h3>
-      <p>A cross-platform fintech app designed to empower both new and experienced investors in Nigeria. It includes dark and light mode, offline-first design, accessibility features, and seamless onboarding.</p>
+      <p>A cross-platform investment app for both new and experienced investors. Designed to be accessible, localized, and visually appealing across light and dark themes.</p>
       <a href="https://www.figma.com/design/60OYvjPM8D0U4iyClp4tN9/Gbemisola-Lasekan---second-semester-exam?node-id=104-2&t=4ZfGQfyA4ER2oFND-1" target="_blank">View Project</a>
     </article>
-
-    <!-- Add more projects here later if needed -->
 
   </section>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>With years of experience as both a Product Designer and Application Manager, I bring a unique blend of design thinking and technical strategy. I’ve worked on mobile apps for banks, investment platforms, and educational tools for underserved communities. I'm always learning — whether it's front-end coding, UX research, or cloud fundamentals.</p>
-    <p>🌍 Based in Lagos, Nigeria | 🎨 Obsessed with clean interfaces | 📈 Focused on scalable impact</p>
+    <p>I’m a multidisciplinary creative with a background in product design and mobile app management. I work at a leading Nigerian bank where I ensure our digital channels stay user-friendly and efficient. I enjoy vlogging, learning new tech skills, and creating lifestyle content.</p>
   </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>You can reach me via email or connect wi
+
 
